[ELY-1023] - Use authentication context in OAuth2CredentialSource to obtain additional credentials a callback handler